Bug 348929 - Incoming and Outgoing message styles are swapped in history and scrollback.
Summary: Incoming and Outgoing message styles are swapped in history and scrollback.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.9.0
Platform: Debian testing Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-09 14:12 UTC by spam
Modified: 2016-09-08 22:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spam 2015-06-09 14:12:16 UTC
When using adium theme chat log's scrollback (previous N messages) and IM Log viewer messages use wrong styles (wrong classes assigned to html). Current messages use correct styles.

It is something like this:
<div class="history outgoing"> incoming: message </div>
<div class="history incoming"> outgoing: message </div>
<hr/> <!-- scrollback -->
<div class="incoming"> incoming: message </div>
<div class="outgoing"> outgoing: message </div>

Only hotfix I can think of is modify style CSS to use .history.incoming and .history.outgoing alongside with .incoming and .outgoing selectors.

Reproducible: Always

Steps to Reproduce:
1. Use adium theme
2. Open IM Log viewer
and\or
2. Set scrollback to non-zero value
3. Open chat, create some fresh messages for comparsion with previous (scrollback) messages

Actual Results:  
IM Log viewer have swapped message styles. Same goes for scrollback.

Expected Results:  
IM Log viewer and scrollback both follow recent message styles
Comment 1 Alexandr Akulich 2016-09-08 21:56:33 UTC
Git commit 7e429544a6f5530365c22ca5f83b4fc4e97de658 by Alexandr Akulich, on behalf of Mariusz Glebocki.
Committed on 08/09/2016 at 21:54.
Pushed by akulichalexandr into branch 'master'.

[lib] Fix message classes for history items

Reviewed-by: Alexandr Akulich <akulichalexander@gmail.com>
REVIEW: 128841

M  +2    -2    lib/adium-theme-message-info.cpp

http://commits.kde.org/telepathy-text-ui/7e429544a6f5530365c22ca5f83b4fc4e97de658