[lib] Fix message classes for history items

Reviewed-by: Alexandr Akulich <akulichalexander@gmail.com>

BUG: 348929
REVIEW: 128841